# Circl

./: CREDITS.md  Circl.py  Design.md  InstructionSet.py  Interpreter.py  LICENSE  Program.py  README.md  cheat sheet.md  pyproject.toml
.github/workflows/: unit-testing.yml
Circl/: __init__.py  __main__.py  instruction_set.py  interpreter.py
docs/: Design.md  basic_use.md  cheat sheet.md
src/circl/: __init__.py  __main__.py  circl.py  instruction_set.py  interpreter.py  parser.py  program.py  source_info.py
tests/: __init__.py  circlTests.py  instructionTests.py  interpreterTests.py  programTests.py  test_circl.py  test_example.py  test_instruction.py  test_instruction_typeguards.py  test_interpreter.py  tests.py
